--- a/Exploratory Data Analysis.ipynb
+++ b/Exploratory Data Analysis.ipynb
@@ -22,6 +22,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<br><br><h1 style='font-family:Trebuchet MS; color:#34495E'> 311 Complaints Analysis (HPD) </h1><center>\n",
+    "\n",
+    "<table style='font-family:Trebuchet MS'>\n",
+    "<col width = '550'>\n",
+    "<col width = '450'>\n",
+    "<tr>\n",
+    "<td><img src=\"https://www1.nyc.gov/assets/hpd/images/content/pages/what-to-expect-sm.png\" /></td>\n",
+    "<td>\n",
+    "The people of New Yorker use the 311 system to report complaints about the non-emergency problems to local authorities. Various agencies in New York are assigned these problems. The <b>Department of Housing Preservation and Development</b> of New York City is the agency that processes 311 complaints that are related to housing and buildings.<br>\n",
+    "<br>    \n",
+    "In the last few years, the number of 311 complaints coming to the Department of Housing Preservation and Development has increased significantly. Although these complaints are not necessarily urgent, the large volume of complaints and the sudden increase is impacting the overall efficiency of operations of the agency.\n",
+    "\n",
+    "</td>\n",
+    "</tr>\n",
+    "</table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<h1 style='font-family:Trebuchet MS; color:#34495E'> Problem Statement <a id='2'></a></h1>\n",
     "<p style='font-family:Trebuchet MS'>The agency needs answers to several questions. The answers to those questions must be supported by data and analytics. These are their questions:<ol><p style='font-family:Trebuchet MS'>\n",
     "1. Which type of complaint should the Department of Housing Preservation and Development of New York City focus on first?<br><br>\n",
@@ -1454,7 +1475,7 @@
     "  </tr>    \n",
     "    <tr>\n",
     "    <td><code>ZipCode</code></td>\n",
-    "    <td>The Y coordinate of the XY coordinate pair which depicts the approximate location of the lot. The XY coordinates are expressed in the New YorkLong Island State Plane coordinate system.</td>\n",
+    "    <td>The zip code that the tax lot is located in.Only one data source is used per tax lot.The zip code is obtained from the Department of City Planning Geosupport System. If the zip code is not available from Geosupport, the DOF-RPAD Master file is used. If a tax lot is split by a zip code boundary, only one zip code is retained..</td>\n",
     "  </tr>    \n",
     "    <tr>\n",
     "    <td><code>YCoord</code></td>\n",
@@ -1477,9 +1498,8 @@
    "metadata": {},
    "source": [
     "<p style='font-family:Trebuchet MS'> From Above Dataset 1 section, it is easy to see that the types of features can be categorised into: <ol><p style='font-family:Trebuchet MS'>\n",
-    "1. <code>BldgDepth, BuiltFAR, LotArea, LotDepth, ResArea</code> are numerical features.<br>\n",
-    "2. <code>YearBuilt, YearAlter1, NumFloors</code> are categorical features.<br>\n",
-    "3. <code>ZipCode, YCoord, XCoord</code> are geospatial data."
+    "1. <code>BldgDepth, BuiltFAR, LotArea, LotDepth, ResArea</code>, <code>YearBuilt, YearAlter1, NumFloors</code> are numerical features.<br>\n",
+    "2. <code>ZipCode, YCoord, XCoord</code> are geospatial data."
    ]
   },
   {
@@ -1923,7 +1943,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1 style='font-family: Trebuchet MS; color:#34459E'> Categorical Variables<a id='10'></a></h1>"
+    "<p style='font-family:Trebuchet MS'> As mentioned earlier, most variables are numerical variables. However, for better visualisation, they are visualised with different kinds of plot due to their difference in unique values. Those with lesser unique values, including: <code>NumFloors,YearBuilt,YearAlter1</code>, thy are visualised with Bar Plot while others: <code>BldgDepth, BuiltFAR, LotArea, LotDepth, ResArea</code>, will be visualised with Regression Plot. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1 style='font-family: Trebuchet MS; color:#34459E'> Visual with Bar Plot<a id='10'></a></h1>"
    ]
   },
   {
@@ -1992,7 +2019,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1 style='font-family: Trebuchet MS; color:#34459E'> Numerical Variables<a id='11'></a></h1>"
+    "<h1 style='font-family: Trebuchet MS; color:#34459E'> Visualise with Regression Plot<a id='11'></a></h1>"
    ]
   },
   {
