--- a/Feature Selections & Modelling.ipynb
+++ b/Feature Selections & Modelling.ipynb
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,11 +538,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def plot_confusion_matrix(cm, classes,\n",
@@ -930,13 +926,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "jupyter": {
-     "outputs_hidden": true,
-     "source_hidden": true
-    }
-   },
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "cnf_matrix = confusion_matrix(y_test, yhat, labels=[1,0])\n",
     "np.set_printoptions(precision=2)\n",
@@ -1014,7 +1007,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p style='font-family:Trebuchet MS'>There is only slight difference between the scores from different models. All of the models produce score at 0.86, which indicates that the model could predict well. However, by comparing all of them, DecisionTree seems to do a better job. Also, we also seemed to predict the possibility and probability of the complaint type."
+    "<p style='font-family:Trebuchet MS'>There is only slight difference between the scores from different models. All of the models produce score at 0.86, which indicates that the model could predict well. However, by comparing all of them, DecisionTree seems to do a better job. Also, we also seemed to be able to predict the possibility and probability of the complaint type with certain building characteristics given."
    ]
   },
   {
