--- a/Exploratory Data Analysis.ipynb
+++ b/Exploratory Data Analysis.ipynb
@@ -1950,7 +1950,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1 style='font-family: Trebuchet MS; color:#34459E'> Visual with Bar Plot<a id='10'></a></h1>"
+    "<h1 style='font-family: Trebuchet MS; color:#34459E'> Visual with Count Plot<a id='10'></a></h1>"
    ]
   },
   {
